--- a/Level3/index.html
+++ b/Level3/index.html
@@ -25,8 +25,14 @@
         <button>search</button>
     </div>
 
-    <div id="b2" style="background-color: rgba(255,0,0,0.5);">Div1</div>
-    <div id="b2" style="background-color: green; visibility: hidden;">Div2</div>
-    <div id="b2" style="background-color: blue;">Div3</div>
+    <div id="content-area">
+        <div id="b2" style="background-color: rgba(255,0,0,0.5);">Div1</div>
+        <div id="b2" style="background-color: green; visibility: hidden;">Div2</div>
+        <div id="b2" style="background-color: blue;">Div3</div>
+    </div>
+    <footer>
+        <p>&#169 This is copyright symbol</p>
+        <p>Website made with &hearts; </p>
+    </footer>
 </body>
 </html>
